// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarToggler should render correctly 1`] = `
.c1 {
  fill: #545456;
  cursor: pointer;
}

.c1:hover {
  fill: #757679;
}

.c0 {
  fill: #FFF !important;
}

.c0:hover {
  fill: #FFF !important;
}

@media (min-width:48rem) {
  .c0 {
    display: none;
  }
}

<NavbarToggler
  onToggle={[MockFunction]}
  toggled={false}
>
  <Styled(FasBars)
    onClick={[MockFunction]}
  >
    <FasBars
      className="c0"
      onClick={[MockFunction]}
      selectable={true}
      size="25px"
    >
      <Styled(SvgFasBars)
        className="c0"
        height="25px"
        onClick={[MockFunction]}
        selectable={1}
        width="25px"
      >
        <SvgFasBars
          className="c0 c1"
          height="25px"
          onClick={[MockFunction]}
          selectable={1}
          width="25px"
        >
          <svg
            className="c0 c1"
            height="25px"
            onClick={[MockFunction]}
            selectable={1}
            viewBox="0 0 448 512"
            width="25px"
          >
            <path
              d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            />
          </svg>
        </SvgFasBars>
      </Styled(SvgFasBars)>
    </FasBars>
  </Styled(FasBars)>
</NavbarToggler>
`;

exports[`NavbarToggler should render correctly with toggled 1`] = `
.c1 {
  fill: #545456;
  cursor: pointer;
}

.c1:hover {
  fill: #757679;
}

.c0 {
  fill: #FFF;
  z-index: 1001;
}

.c0:hover {
  fill: #FFF;
}

@media (min-width:48rem) {
  .c0 {
    display: none;
  }
}

<NavbarToggler
  onToggle={[MockFunction]}
  toggled={true}
>
  <Styled(FasTimes)
    onClick={[MockFunction]}
  >
    <FasTimes
      className="c0"
      onClick={[MockFunction]}
      selectable={true}
      size="20px"
    >
      <Styled(SvgFasTimes)
        className="c0"
        height="20px"
        onClick={[MockFunction]}
        selectable={1}
        width="20px"
      >
        <SvgFasTimes
          className="c0 c1"
          height="20px"
          onClick={[MockFunction]}
          selectable={1}
          width="20px"
        >
          <svg
            className="c0 c1"
            height="20px"
            onClick={[MockFunction]}
            selectable={1}
            viewBox="0 0 352 512"
            width="20px"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </SvgFasTimes>
      </Styled(SvgFasTimes)>
    </FasTimes>
  </Styled(FasTimes)>
</NavbarToggler>
`;
